--- a/home.html
+++ b/home.html
@@ -70,7 +70,7 @@
     <!-- Menu Section -->
     <section id="menu" class="py-16 bg-gray-100">
         <div class="container mx-auto text-center">
-            <h2 class="text-4xl font-bold mb-8">Our Menu</h2>
+            <h2 class="text-4xl font-bold mb-8">The Menu</h2>
             <!-- Menu items go here -->
         </div>
     </section>
