--- a/home.html
+++ b/home.html
@@ -68,10 +68,44 @@
     
 
     <!-- Menu Section -->
-    <section id="menu" class="py-16 bg-gray-100">
-        <div class="container mx-auto text-center">
-            <h2 class="text-4xl font-bold mb-8">The Menu</h2>
-            <!-- Menu items go here -->
+    <section id="menu" class="py-16 bg-gray-100 h-[500px]">
+        <div class="container mx-auto flex flex-col justify-center w-5/6">
+            <div class="flex w-full justify-center items-center gap-x-4 mb-6">
+                <div class="bg-mainColor w-24 h-8 text-center text-white font-serif rounded-sm pt-1 hover:bg-secondColor hover:scale-110">
+                    <p>Breakfast</p>
+                </div>
+                <div class="bg-mainColor w-24 h-8 text-center text-white font-serif rounded-sm pt-1 hover:bg-secondColor hover:scale-110">Lunch</div>
+                <div class="bg-mainColor w-24 h-8 text-center text-white font-serif rounded-sm pt-1 hover:bg-secondColor hover:scale-110">Dinner</div>
+            </div>
+            <div class="grid grid-cols-3 w-full content-center justify-items-center">
+                <div class="bg-secondColor w-72 h-56 rounded-md">
+                    <div class="w-full h-full">
+                        <div class="w-full h-3/4 bg-cover bg-center rounded-t-md"  style="background-image: url(./images/west-lake-fish.jpg)">
+                        </div>
+                        <div class="w-full h-1/4 flex justify-center items-center font-serif text-white font-bold">
+                            <p>West Lake Vinegar Fish</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="bg-secondColor w-72 h-56 rounded-md">
+                    <div class="w-full h-full">
+                        <div class="w-full h-3/4 bg-cover bg-center rounded-t-md"  style="background-image: url(./images/west-lake-fish.jpg)">
+                        </div>
+                        <div class="w-full h-1/4 flex justify-center items-center font-serif text-white font-bold">
+                            <p>West Lake Vinegar Fish</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="bg-secondColor w-72 h-56 rounded-md">
+                    <div class="w-full h-full">
+                        <div class="w-full h-3/4 bg-cover bg-center rounded-t-md"  style="background-image: url(./images/west-lake-fish.jpg)">
+                        </div>
+                        <div class="w-full h-1/4 flex justify-center items-center font-serif text-white font-bold">
+                            <p>West Lake Vinegar Fish</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 
