Test email settings

--- a/reservation.html
+++ b/reservation.html
@@ -10,7 +10,7 @@
 <body class="bg-gray-100">
     <div class="max-w-lg mx-auto mt-10 bg-white p-8 rounded-lg shadow-lg">
         <h2 class="text-2xl font-bold mb-6 text-center">Reservation Form</h2>
-        <form action="submit_reservation.php" method="POST">
+        <form>
             <div class="mb-4">
                 <label for="customer_first_name" class="block text-gray-700">First Name</label>
                 <input type="text" id="customer_first_name" name="customer_first_name" class="w-full px-4 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-600" required>
