--- a/home.html
+++ b/home.html
@@ -24,6 +24,12 @@
       <link rel="preconnect" href="https://fonts.googleapis.com">
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
       <link href="https://fonts.googleapis.com/css2?family=Alex+Brush&display=swap" rel="stylesheet">
+       <!-- Tailwind CSS CDN -->
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+  <!-- Bootstrap CSS CDN -->
+  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+  <!-- Font Awesome for Social Media Icons -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
 </head>
 <body>
     <!-- Navbar -->
@@ -91,39 +97,54 @@
         </div>
     </section>
 
-    <!-- Footer -->
-    <footer class="bg-mainColor text-white py-8">
-        <div class="container mx-auto px-4">
-        <div class="flex flex-wrap justify-between items-center">
-        <!-- Logo -->
-        <div class="w-full md:w-1/3 mb-4 md:mb-0">
-        <img src="./images/company-logo.jpg" alt="Restaurant Logo" class="h-16">
+   <!-- Footer -->
+   <footer class="bg-mainColor text-white py-2">
+    <div class="container mx-auto px-4">
+      <div class="row">
+        <div class="col-md-3 mb-4 md:mb-0">
+          <img src="./images/company-logo.jpg" alt="Logo" class="h-28 absolute left-5 top-2 rounded-lg z-50">
         </div>
-        
-            <!-- Address and Contact Info -->
-        <div class="w-full md:w-1/3 mb-4 md:mb-0 text-center">
-        <p class="text-lg font-semibold">Restaurant Name</p>
-        <p>123 Food Street</p>
-        <p>Delicious City, FL 12345</p>
-        <p>Phone: (123) 456-7890</p>
-        <p>Email: contact@restaurant.com</p>
+        <div class="col-md-3 mb-4 md:mb-0">
+          <h5 class="text-lg font-semibold mb-2">Contact Us</h5>
+          <p><a href="#" class="hover:text-secondColor no-underline transition duration-300 ease-in-out ">
+            <i class="fa-solid fa-location-dot pr-2"></i>Via Bettega 12</a>
+           </p>
+          <p>38018 Molveno (Tn) ,Italia</p>
+          <p>
+            <a href="#" class="hover:text-secondColor no-underline transition duration-300 ease-in-out ">
+            <i class="fa-regular fa-envelope pr-1"></i>  info@example.com</a>
+          </p>
+          <p>
+            <a href="#" class="hover:text-secondColor no-underline transition duration-300 ease-in-out ">
+            <i class="fa-solid fa-phone  pr-1"></i>  (123) 456-7890</a>
+          </p>
         </div>
-        
-            <!-- Social Media -->
-        <div class="w-full md:w-1/3 flex justify-center md:justify-end space-x-6">
-        <a href="https://www.instagram.com/restaurant" target="_blank">
-        <i class="fa-brands fa-instagram" ></i>
-        </a>
-        <a href="mailto:contact@restaurant.com">
-        <i class="fa-regular fa-envelope"></i>
-        </a>
-        <a href="tel:1234567890">
-            <i class="fa-solid fa-phone"></i>              </a>
+        <div class="col-md-3 mb-4 md:mb-0">
+          <h5 class="text-lg font-semibold mb-2">Follow Us</h5>
+          <div class="flex space-x-4">
+            <a href="#" class="hover:text-secondColor transition duration-300 ease-in-out"><i class="fab fa-facebook fa-2x"></i></a>
+            <a href="#" class="hover:text-secondColor transition duration-300 ease-in-out"><i class="fa-brands fa-weixin fa-2x"></i></a>
+            <a href="#" class="hover:text-secondColor transition duration-300 ease-in-out"><i class="fab fa-instagram fa-2x"></i></a>
+          </div>
         </div>
+        <div class="col-md-3 mb-4 md:mb-0">
+          <h5 class="text-lg font-semibold mb-2">Opening Time</h5>
+          <p> We open all the days of the week</p>
+          <p>07:00 – Breakfast</p>
+          <p>11:30 – Lunch</p>
+          <p>17:30 – Dinner</p>
+          <p>23:00 – Only Drinks </p>
         </div>
-        </div>
-        </footer>
-
+      </div>
+    </div>
+    <div class="mt-6 border-t border-gray-700 pt-2 text-center">
+      <p class="text-white">© 2024 Molveno Lake Resort. All rights reserved.</p>
+    </div>
+  </footer>
+<!-- Bootstrap JS and dependencies -->
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <!-- Tailwind CSS CDN -->
     <script src="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.js"></script>
 </body>
