--- a/home.html
+++ b/home.html
@@ -138,7 +138,7 @@
       </div>
     </div>
     <div class="mt-6 border-t border-gray-700 pt-2 text-center">
-      <p class="text-white">© 2024 Molveno Lake Resort. All rights reserved.</p>
+      <p class="text-white">© 2024 Molvveno Lake Resort. All rights reserved.</p>
     </div>
   </footer>
 <!-- Bootstrap JS and dependencies -->
