--- a/home.html
+++ b/home.html
@@ -23,6 +23,28 @@
           }
         }
       </script>
+      <style>
+        /* Modal stilini ekleyin */
+        .modal {
+            display: none; /* Başlangıçta gizli */
+            position: fixed;
+            z-index: 1000; /* Daha yüksek bir z-index değeri */
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            overflow: auto;
+            background-color: rgb(0,0,0); /* Fallback color */
+            background-color: rgba(0,0,0,0.4); /* Siyah w/ opaklık */
+        }
+        .modal-content {
+            background-color: #fefefe;
+            margin: 15% auto;
+            padding: 20px;
+            border: 1px solid #888;
+            width: 80%; /* İsteğe bağlı olarak genişliği ayarlayın */
+        }
+        </style>
       <link rel="preconnect" href="https://fonts.googleapis.com">
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
       <link href="https://fonts.googleapis.com/css2?family=Alex+Brush&display=swap" rel="stylesheet">
@@ -51,8 +73,7 @@
                 </ul>
             </div>
             <div class="flex items-center space-x-4">
-                <button class="bg-secondButtonColor text-white px-4 py-2 rounded hover:bg-yellow-600">Reserve Now</button>
-                
+                <button class="myBtn bg-secondButtonColor text-white px-4 py-2 rounded hover:bg-yellow-600">Reserve Now</button>
             </div>
         </div>
     </nav>
@@ -63,7 +84,7 @@
         <div class="container mx-auto h-full flex flex-col justify-center items-center text-center text-white relative z-10">
             <h1 class="text-7xl font-bold mb-4" style="font-family: Alex Brush, cursive;">Molveno Lake Resort</h1>
             <p class="text-2xl mb-8">Experience the best dining with us</p>
-            <button class="bg-mainColor text-white px-6 py-3 rounded hover:bg-yellow-600">Reserve Now</button>
+            <button class="myBtn bg-mainColor text-white px-6 py-3 rounded hover:bg-yellow-600">Reserve Now</button>
         </div>
     </section>
     
@@ -86,63 +107,66 @@
 
     <!-- Reserve Now Section -->
     <section id="reserve" class="py-16 bg-gray-100">
-        <div class="container mx-auto">
+        <div class="container mx-auto" >
             <!--<h2 class="text-4xl font-bold mb-8">Reserve Now</h2> -->
             <div class="container mx-auto h-full flex flex-col justify-center items-center text-center text-mainColor relative z-10 space-y-4">
                 <div> Make a reservation now ! </div>
-                <button id="Reserve" class="bg-secondButtonColor text-white px-4 py-2 rounded hover:bg-yellow-600">Reserve Now</button>
+                <button class="myBtn bg-secondButtonColor text-white px-4 py-2 rounded hover:bg-yellow-600">Reserve Now</button>
             </div>
-            <div id="hidden" class="max-w-lg mx-auto mt-10 bg-white p-8 rounded-lg shadow-lg hidden">
-                <h2 class="text-2xl font-bold mb-6 text-center">Reservation Form</h2>
-                <form action="" method="">
-                    <div class="mb-4">
-                        <label for="customer_first_name" class="block text-gray-700">First Name</label>
-                        <input type="text" id="customer_first_name" name="customer_first_name" class="w-full px-4 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-600" required>
-                    </div>
-                    <div class="mb-4">
-                        <label for="customer_last_name" class="block text-gray-700">Last Name</label>
-                        <input type="text" id="customer_last_name" name="customer_last_name" class="w-full px-4 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-600" required>
-                    </div>
-                    <div class="mb-4">
-                        <label for="email" class="block text-gray-700">Email</label>
-                        <input type="email" id="email" name="email" class="w-full px-4 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-600" required>
-                    </div>
-                    <div class="mb-4">
-                        <label for="mobile_no" class="block text-gray-700">Mobile Number</label>
-                        <input type="tel" id="mobile_no" name="mobile_no" class="w-full px-4 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-600" required>
-                    </div>
-                    <div class="mb-4">
-                        <label for="number_of_people" class="block text-gray-700">Number of People</label>
-                        <input type="number" id="number_of_people" name="number_of_people" class="w-full px-4 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-600" required>
-                    </div>
-                    <div class="mb-4">
-                        <label for="reservation_date" class="block text-gray-700">Reservation Date</label>
-                        <input type="text" id="reservation_date" name="reservation_date" class="w-full px-4 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-600 flatpickr" required>
-                    </div>
-                    <div class="mb-4">
-                        <label for="reservation_time" class="block text-gray-700">Reservation Time</label>
-                        <input type="time" id="reservation_time" name="reservation_time" class="w-full px-4 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-600" required>
-                    </div>
-                    <div class="mb-4">
-                        <label for="is_guest" class="block text-gray-700">Hotel Guest?</label>
-                        <input type="checkbox" id="is_guest" name="is_guest" class="h-5 w-5 text-blue-600">
-                    </div>
-                    <div class="mb-4">
-                        <label for="hotel_room_number" class="block text-gray-700">Hotel Room Number (if applicable)</label>
-                        <input type="text" id="hotel_room_number" name="hotel_room_number" class="w-full px-4 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-600">
-                    </div>
-                    <div class="mb-4">
-                        <label for="status" class="block text-gray-700">Status</label>
-                        <select id="status" name="status" class="w-full px-4 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-600" required>
-                            <option value="confirmed">Confirmed</option>
-                            <option value="pending">Pending</option>
-                            <option value="cancelled">Cancelled</option>
-                        </select>
-                    </div>
-                    <div class="text-center">
-                        <input type="submit" value="Submit Reservation" class="bg-blue-600 text-white px-6 py-2 rounded-lg cursor-pointer hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-blue-600">
-                    </div>
-                </form>
+            <div id="myModal" class="modal">
+                <div class="modal-content max-w-lg mx-auto mt-10 bg-white p-8 rounded-lg shadow-lg">
+                    <span class="close">&times;</span>
+                    <h2 class="text-2xl font-bold mb-6 text-center">Reservation Form</h2>
+                    <form id="myForm">
+                        <div class="mb-4">
+                            <label for="customer_first_name" class="block text-gray-700">First Name</label>
+                            <input type="text" id="customer_first_name" name="customer_first_name" class="w-full px-4 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-600" required>
+                        </div>
+                        <div class="mb-4">
+                            <label for="customer_last_name" class="block text-gray-700">Last Name</label>
+                            <input type="text" id="customer_last_name" name="customer_last_name" class="w-full px-4 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-600" required>
+                        </div>
+                        <div class="mb-4">
+                            <label for="email" class="block text-gray-700">Email</label>
+                            <input type="email" id="email" name="email" class="w-full px-4 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-600" required>
+                        </div>
+                        <div class="mb-4">
+                            <label for="mobile_no" class="block text-gray-700">Mobile Number</label>
+                            <input type="tel" id="mobile_no" name="mobile_no" class="w-full px-4 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-600" required>
+                        </div>
+                        <div class="mb-4">
+                            <label for="number_of_people" class="block text-gray-700">Number of People</label>
+                            <input type="number" id="number_of_people" name="number_of_people" class="w-full px-4 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-600" required>
+                        </div>
+                        <div class="mb-4">
+                            <label for="reservation_date" class="block text-gray-700">Reservation Date</label>
+                            <input type="text" id="reservation_date" name="reservation_date" class="w-full px-4 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-600 flatpickr" required>
+                        </div>
+                        <div class="mb-4">
+                            <label for="reservation_time" class="block text-gray-700">Reservation Time</label>
+                            <input type="time" id="reservation_time" name="reservation_time" class="w-full px-4 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-600" required>
+                        </div>
+                        <div class="mb-4">
+                            <label for="is_guest" class="block text-gray-700">Hotel Guest?</label>
+                            <input type="checkbox" id="is_guest" name="is_guest" class="h-5 w-5 text-blue-600">
+                        </div>
+                        <div class="mb-4">
+                            <label for="hotel_room_number" class="block text-gray-700">Hotel Room Number (if applicable)</label>
+                            <input type="text" id="hotel_room_number" name="hotel_room_number" class="w-full px-4 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-600">
+                        </div>
+                        <div class="mb-4">
+                            <label for="status" class="block text-gray-700">Status</label>
+                            <select id="status" name="status" class="w-full px-4 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-600" required>
+                                <option value="confirmed">Confirmed</option>
+                                <option value="pending">Pending</option>
+                                <option value="cancelled">Cancelled</option>
+                            </select>
+                        </div>
+                        <div class="text-center">
+                            <input type="submit" value="Submit Reservation" class="bg-blue-600 text-white px-6 py-2 rounded-lg cursor-pointer hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-blue-600">
+                        </div>
+                    </form>
+                </div>
             </div>
             <!-- Reservation form or instructions go here -->
         </div>
@@ -184,18 +208,36 @@
     <!-- Tailwind CSS CDN -->
     <script src="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
-<script>
-    flatpickr(".flatpickr", {
-        enableTime: false,
-        dateFormat: "Y-m-d",
-    });
-</script>
-<script>
-    $(document).ready(function() {
-        $('#Reserve').click(function() {
-            $('#hidden').toggle(); // or .toggle() or .css('display', 'block')
+    <script>
+        flatpickr(".flatpickr", {
+            enableTime: false,
+            dateFormat: "Y-m-d",
         });
-    });
-</script>
+    </script>
+    <script>
+        // Modal ve butonu seçme
+        var modal = document.getElementById("myModal");
+        var btns = document.getElementsByClassName("myBtn");
+        var span = document.getElementsByClassName("close")[0];
+
+        // Butona tıklayınca modalı göster
+        for (var i = 0; i < btns.length; i++) {
+            btns[i].onclick = function() {
+                modal.style.display = "block";
+            }
+        }
+
+        // X butonuna tıklayınca modalı kapat
+        span.onclick = function() {
+            modal.style.display = "none";
+        }
+
+        // Modal dışında bir yere tıklayınca modalı kapat
+        window.onclick = function(event) {
+            if (event.target == modal) {
+                modal.style.display = "none";
+            }
+        }
+    </script>
 </body>
 </html>
