reservation button class

--- a/home.html
+++ b/home.html
@@ -94,7 +94,7 @@
                 </ul>
             </div>
             <div class="flex items-center space-x-4">
-                <button class="text-white select-none rounded-lg border border-gray-900 py-3 px-6
+                <button class="myBtn text-white select-none rounded-lg border border-gray-900 py-3 px-6
                  text-center align-middle font-sans text-xs font-bold uppercase
                   transition-all  focus:ring focus:ring-gray-300 active:opacity-[0.85] hover:scale-105 transition ease-in-out
                    disabled:pointer-events-none disabled:opacity-50 disabled:shadow-none hover:bg-secondButtonColor ml-10">Reserve Now</button>
@@ -111,7 +111,7 @@
             <button class="text-white select-none rounded-lg border border-gray-900 py-3 px-6
                  text-center align-middle font-sans text-xs font-bold uppercase
                   transition-all  focus:ring focus:ring-gray-300 active:opacity-[0.85] hover:scale-105 transition ease-in-out
-                   disabled:pointer-events-none disabled:opacity-50 disabled:shadow-none hover:bg-secondButtonColor">Reserve Now</button>
+                   disabled:pointer-events-none disabled:opacity-50 disabled:shadow-none hover:bg-secondButtonColor myBtn ">Reserve Now</button>
         </div>
     </section>
     
