--- a/home.html
+++ b/home.html
@@ -98,18 +98,18 @@
     </section>
 
    <!-- Footer -->
-   <footer class="bg-mainColor text-white py-2">
+   <footer class="bg-mainColor text-white  text-sm h-full">
     <div class="container mx-auto px-4">
-      <div class="row">
-        <div class="col-md-3 mb-4 md:mb-0">
-          <img src="./images/company-logo.jpg" alt="Logo" class="h-28 absolute left-5 top-2 rounded-lg z-50">
+      <div class="row flex justify-center pt-8  ">
+        <div class="col-md-3">
+          <img src="./images/company-logo.jpg" alt="Logo" class="h-28  rounded-lg z-50">
         </div>
-        <div class="col-md-3 mb-4 md:mb-0">
+        <div class="col-md-3 ">
           <h5 class="text-lg font-semibold mb-2">Contact Us</h5>
           <p><a href="#" class="hover:text-secondColor no-underline transition duration-300 ease-in-out ">
-            <i class="fa-solid fa-location-dot pr-2"></i>Via Bettega 12</a>
+            <i class="fa-solid fa-location-dot pr-2"></i>China, Zhejiang, Huzhou</a>
            </p>
-          <p>38018 Molveno (Tn) ,Italia</p>
+          <p>Wuxing District, Tai Wu road 168a</p>
           <p>
             <a href="#" class="hover:text-secondColor no-underline transition duration-300 ease-in-out ">
             <i class="fa-regular fa-envelope pr-1"></i>  info@example.com</a>
@@ -119,7 +119,7 @@
             <i class="fa-solid fa-phone  pr-1"></i>  (123) 456-7890</a>
           </p>
         </div>
-        <div class="col-md-3 mb-4 md:mb-0">
+        <div class="col-md-3 ">
           <h5 class="text-lg font-semibold mb-2">Follow Us</h5>
           <div class="flex space-x-4">
             <a href="#" class="hover:text-secondColor transition duration-300 ease-in-out"><i class="fab fa-facebook fa-2x"></i></a>
@@ -137,8 +137,8 @@
         </div>
       </div>
     </div>
-    <div class="mt-6 border-t border-gray-700 pt-2 text-center">
-      <p class="text-white">© 2024 Molveno Lake Resort. All rights reserved.</p>
+    <div class="mt-2 border-t border-gray-700  text-center">
+      <p class="text-white">© 2024 Molveno   Lake Resort. All rights reserved.</p>
     </div>
   </footer>
 <!-- Bootstrap JS and dependencies -->
